microservices-demo/docs/03-staging/assets/manifests/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microservices-demo-staging
  namespace: microservices-demo-staging
spec:
  tls:
    - hosts:
        - "*.rsdasa.net"
      secretName: rsdasa.net
  rules:
    - host: staging.rsdasa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  ingressClassName: nginx
